test/fail/page-arg-object.app
//not allowed in page arguments
application test

  define page test(o: Object) {
    "test"
  }